--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
    "devDependencies": {
       "@types/cors": "^2.8.18",
       "@types/express": "^5.0.2",
-      "@types/node": "^22.13.10",
+      "@types/node": "^22.15.21",
       "ts-node": "^10.9.2",
       "ts-node-dev": "^2.0.0",
-      "typescript": "^5.8.2"
+      "typescript": "^5.8.3"
    },
    "dependencies": {
+      "@types/express-serve-static-core": "^5.0.6",
       "cors": "^2.8.5",
       "express-async-errors": "^3.1.1",
       "reflect-metadata": "^0.2.2",
