--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
          "es2021"
       ],
       "target": "es2021",
+      "skipLibCheck": true,
       "module": "commonjs",
       "moduleResolution": "node",
       "rootDir": "./src",
