--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
    "devDependencies": {
       "@types/cors": "^2.8.18",
       "@types/express": "^5.0.2",
+      "@types/jest": "^29.5.14",
       "@types/node": "^22.15.21",
+      "jest": "^29.7.0",
+      "ts-jest": "^29.3.4",
       "ts-node": "^10.9.2",
       "ts-node-dev": "^2.0.0",
       "typescript": "^5.8.3"
