--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
-   "compilerOptions": {
-     "lib": ["es2021"],
-     "target": "es2021",
-     "skipLibCheck": true,
-     "module": "commonjs",
-     "moduleResolution": "node",
-     "rootDir": "./src",
-     "outDir": "./build",
-     "emitDecoratorMetadata": true,
-     "experimentalDecorators": true,
-     "sourceMap": true,
-     "esModuleInterop": true,
-     "types": ["jest", "node", "express"],  // 👈 Adiciona "jest" aqui
-     "resolveJsonModule": true              // 👈 Recomendado para importar JSON se necessário
-   },
-   "include": ["src/**/*"]
- }
- 
+  "compilerOptions": {
+    "lib": ["ES2021"],
+    "target": "ES2021",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "rootDir": "./src",
+    "outDir": "./build",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "types": ["node", "jest", "express"],  
+    "typeRoots": ["./src/types", "./node_modules/@types"]
+  },
+  "include": ["src/**/*", "src/types/**/*.d.ts", "tests/**/*"]
+}
